changed orbs to ensure they dont overlap with content

--- a/style.css
+++ b/style.css
@@ -167,22 +167,33 @@ h4 {
 }
 
 .contact * {
-  max-width: 600px;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   color: #77C9D4;
 }
 
 .contact h2 {
+  color: #015249;
+  background-color: #dedee4;
+  padding: 2px;
+  max-width: 600px;
+}
+
+.contact h3 {
+  font-size: 20px;
   color: #77C9D4;
+
 }
 
 .contact a {
   color: #57BC90;
+  text-decoration: none;
+
 }
 
 .contact img {
-  width: 80px;
+  width: 50px;
   background-color: #dedee4;
   padding: 8px;
   border-radius: 15px;
@@ -415,23 +426,26 @@ text-align: center;
   height: 75px;
   width: 75px;
   animation:
-    fade 12s ease infinite, 
-    roll 12s ease infinite;
+    fade 10s ease infinite, 
+    roll 10s ease infinite;
   border-radius: 100%;
   animation-play-state: running;
 }
+.secret-orb :hover {
+  border-radius: 0%;
+}
 
 @keyframes fade {
-  1%, 5% {
+  1%, 3%, 90%, 99% {
     background-color: #dedee4;
     }
   25% {
     background-color: #77C9D4;
   }  
-  45% {
+  35% {
     background-color: #57BC90;
   }
-  75%, 99% {
+  55% {
     background-color: #015249;
     }
   }
@@ -440,15 +454,8 @@ text-align: center;
     0% {
       transform: translate(0,0);
     }
-
-    75% {
-      transform: translate(90vw, 0);
-    }
-    85% {
-      transform: translate(90vw, 80px);
-    }
     100% {
-      transform: translate(90vw, 80px);
+      transform: translate(110vw, 0);
     }
   }
 
@@ -458,8 +465,8 @@ text-align: center;
     height: 75px;
     width: 75px;
     animation:
-      fade 12s ease infinite, 
-      roll2 12s ease infinite;
+      fade 10s ease infinite, 
+      roll2 10s ease infinite;
     border-radius: 100%;
     animation-play-state: running;
   }
@@ -468,14 +475,8 @@ text-align: center;
     0% {
       transform: translate(0,0);
     }
-    75% {
-      transform: translate(-90vw, 0);
-    }
-    85% {
-      transform: translate(-90vw, 80px);
-    }
     100% {
-      transform: translate(-90vw, 80px);
+      transform: translate(-110vw, 0);
     }
   }
 
